--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
+    "react-native-elements": "^0.19.0",
+    "react-native-in-app-notification": "^2.2.0",
+    "react-native-local-notification": "^3.0.3",
     "react-navigation": "^1.0.0-beta.27"
   }
 }
