--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-in-app-notification": "^2.2.0",
     "react-native-local-notification": "^3.0.3",
     "react-native-modal": "^5.2.0",
+    "react-native-snap-carousel": "^3.6.0",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.27"
   }
